--- a/Tareas/src/index.css
+++ b/Tareas/src/index.css
@@ -1,4 +1,20 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html, 
+body {
+  color: white;
+  background-color: #1b1b32;
+  font-family: Lato,sans-serif;
+}
+
+h1{
+  color: #1b1b32;
+  font-size: 25px;
+  font-family: Roboto , Lato , sans-serif , Hack Nerd Font;
+  margin: 20px 0;
+  text-align: center;
 }
